--- a/Css/styles.css
+++ b/Css/styles.css
@@ -1,3 +1,24 @@
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 700px) {
+  body .main {
+    width: 300px;
+    height: 300px;
+    border: 1px solid #000;
+  }
+}
 
+.main {
+  width: 500px;
+  height: 500px;
+  border: 1px solid #000;
+  background-image: url("../Img/Front-Pages.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
