--- a/Css/styles.css
+++ b/Css/styles.css
@@ -2,7 +2,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 50px;
+  margin-top: 5%;
 }
 @media (max-width: 700px) {
   body .main {
