--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,17 +3,14 @@ body {
   align-items: center;
   justify-content: center;
 }
-@media (max-width: 400px) {
+@media (min-width: 400px) {
   body .main {
-    width: 700px;
-    height: 700px;
-    border: 1px solid #000;
-    margin-top: 5%;
+    display: none;
   }
 }
 
 .main {
-  width: 500px;
+  width: 800px;
   height: 500px;
   border: 1px solid #000;
   margin-top: 5%;
