--- a/Sass/styles.scss
+++ b/Sass/styles.scss
@@ -1,14 +1,14 @@
 @use 'MixinFunc';
 body{
     @include MixinFunc.create-flexbox(center);
-    @media (max-width:400px) {
+    @media (min-width:400px) {
         .main{
-            @include MixinFunc.sizeContainer(700px,700px)
+           display: none
         }
     }
 }
 .main{
-    @include MixinFunc.sizeContainer(500px,500px);
+    @include MixinFunc.sizeContainer(800px,500px);
     background-image: url("../Img/Front-Pages.jpeg");
     @include MixinFunc.arreglar-imagen;
 }
