--- a/Css/styles.css
+++ b/Css/styles.css
@@ -5,12 +5,15 @@ body {
 }
 @media (min-width: 400px) {
   body .main {
-    display: none;
+    width: 800px;
+    height: 500px;
+    border: 1px solid #000;
+    margin-top: 5%;
   }
 }
 
 .main {
-  width: 800px;
+  width: 500px;
   height: 500px;
   border: 1px solid #000;
   margin-top: 5%;
