--- a/Css/styles.css
+++ b/Css/styles.css
@@ -3,10 +3,10 @@ body {
   align-items: center;
   justify-content: center;
 }
-@media (min-width: 400px) {
+@media (max-width: 400px) {
   body .main {
-    width: 800px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
     border: 1px solid #000;
     margin-top: 5%;
   }
