--- a/View/index.html
+++ b/View/index.html
@@ -7,6 +7,18 @@
     <link rel = "stylesheet" href = "../Css/styles.css">
 </head>
 <body>
-    <main class = "main"></main>
+    <main class = "main">
+        <h2 class = "main__h2">Organiza tu trabajo y tu vida, por fin.</h2>
+        <nav class = "main__nav">
+            <ul class="main__nav--active">
+                <li><a href="#" class="main__nav--active--a"><img src="../Icons/instagram.png" alt="">Continua con Instagram</a></li>
+                <li><a href="#" class = main__nav--active--a><img src="../Icons/facebook.png" alt="">Continua con Facebook</a></li>
+            </ul>
+        </nav>
+
+        <div class = "main__button">
+           <img src="../Icons/flecha-correcta.png" alt="Image not avaliable" class = "main__button--active">
+        </div>
+    </main>
 </body>
 </html>
