Front page completed, sign-in completed; se agregro el back en javascript el cual registra y inicia sesion

--- a/Sass/--Sign-up.scss
+++ b/Sass/--Sign-up.scss
@@ -1,5 +1,6 @@
 @use 'MixinFunc';
 @use '_MixinButtons';
+
 body {
     @include MixinFunc.create-flexbox(center);
     background-color: rgb(244, 244, 244);
@@ -10,14 +11,17 @@ body {
     display: flex;
     justify-content: center;
     background-color: #fff;
-    box-shadow: 1px 5px 30px 15px rgba(0, 0, 0, 0.3); /* Sombra: offsetX offsetY blurRadius color */
+    box-shadow: 1px 5px 30px 15px rgba(0, 0, 0, 0.3);
+    /* Sombra: offsetX offsetY blurRadius color */
 
-    h1{
+    h1 {
         position: relative;
         right: 8.6rem;
     }
+
     &__form {
         position: absolute;
+
         &--inputs {
             margin-top: 5em;
             position: relative;
@@ -31,12 +35,14 @@ body {
                 margin-right: 10px;
                 margin-top: 2em;
                 @include MixinFunc.arreglar-inputs(15em);
+
                 @for $iterador from 1 through 2 {
                     &-label-#{$iterador} {
                         @if $iterador==1 {
                             position: absolute;
                             right: 438px;
                         }
+
                         @else {
                             position: relative;
                             right: 215px;
@@ -61,9 +67,10 @@ body {
                 background: none;
                 margin-top: 5em;
                 outline: 0px;
+
                 @for $iterador from 1 through 2 {
                     &-label-#{$iterador} {
-                      position: relative;
+                        position: relative;
                         bottom: 4em;
                     }
                 }
