--- a/View/sign-in.html
+++ b/View/sign-in.html
@@ -4,29 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <title>Sign in</title>
     <link rel="icon" href="../Icons/documento.png">
-    <link rel="stylesheet" href="../Css/--Sign-up.css">
+    <link rel="stylesheet" href="../Css/--Sign-in.css">
 </head>
 
 <body>
     <main class="main">
-        <h1>Registrate</h1>
+        <h1>Inicia Sesion</h1>
         <form action="" class="main__form">
-            <div class="main__form--inputs">
-                <input name="name" type="text" class="main__form--inputs--action name" autocomplete="off">
-                <label for="name" class="main__form--inputs--action-label-1">
-                    <span class="main__form--inputs--action--label--span-1 name">
-                        Nombre
-                    </span>
-                </label>
-                <input type="text" class="main__form--inputs--action lastName" autocomplete="off">
-                <label class="main__form--inputs--action-label-2">
-                    <span class="main__form--inputs--action--label--span-2">
-                        Apellido
-                    </span>
-                </label>
-            </div>
             <div class="main__form--inputs--div">
                 <input type="text" class="main__form--inputs--div--action email" autocomplete="off" >
                 <label for="name" class="main__form--inputs--div--action-label-1">
@@ -43,12 +29,11 @@
             </div>
 
             <div class = main--buttons>
-                <button class = "btton" type="button">Registrarse</button>
-                <a href="sign-in.html">Inciar Sesion</a>
+                <button class = "btton"  type="button">Entrar</button>
             </div>
         </form>
     </main>
-<script src = "../Controller/datos.js"></script>
+<script src = "../Controller/sign-in.js"></script>
 </body>
 
 </html>
