--- a/Css/--Sign-in.css
+++ b/Css/--Sign-in.css
@@ -32,11 +32,12 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgb(244, 244, 244);
+  margin: 5% 0%;
 }
 
 .main {
   width: 500px;
-  height: 500px;
+  height: 400px;
   margin-top: 3%;
   display: flex;
   justify-content: center;
@@ -46,43 +47,17 @@ body {
 }
 .main h1 {
   position: relative;
-  right: 8.6rem;
+  right: 7.5rem;
 }
 .main__form {
   position: absolute;
 }
-.main__form--inputs {
-  margin-top: 5em;
-  position: relative;
-  padding-left: 80px;
-}
-.main__form--inputs--action {
-  background: none;
-  color: #000;
-  border: 0px;
-  outline: 0px;
-  margin-right: 10px;
-  margin-top: 2em;
-  width: 15em;
-  border: 0px;
-  border-bottom: 3px solid #000;
-}
-.main__form--inputs--action-label-1 {
-  position: absolute;
-  right: 438px;
-}
-.main__form--inputs--action-label-2 {
-  position: relative;
-  right: 215px;
-  bottom: 1.7em;
-}
 .main__form--inputs--div {
-  margin-top: 5rem;
-  padding-left: 80px;
+  margin-top: 8rem;
 }
 .main__form--inputs--div--action {
   display: block;
-  width: 31.4em;
+  width: 30em;
   border: 0px;
   border-bottom: 3px solid #000;
   background: none;
@@ -98,4 +73,4 @@ body {
   bottom: 4em;
 }
 
-/*# sourceMappingURL=--Sign-up.css.map */
+/*# sourceMappingURL=--Sign-in.css.map */
