Type of button modified in sign-up

--- a/View/sign-up.html
+++ b/View/sign-up.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class = main--buttons>
-                <button class = "btton" type="button">Registrarse</button>
+                <button class = "btton" type="submit">Registrarse</button>
                 <a href="sign-in.html">Inciar Sesion</a>
             </div>
         </form>
