--- a/View/panel.html
+++ b/View/panel.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Area</title>
+    <link rel="stylesheet" href="../Css/--Panel.css">
+    <link rel="icon" href="../Icons/comprobado.png">
 </head>
 <body>
-    
+    <nav class = "nav">
+        <header class="nav__header">
+            <div class = "nav__header__img"></div>
+            <input type="text" name="" id="" class = "" placeholder="Buscar">
+        </header>
+        <ul class="nav__ul">
+            <li class = "nav__ul--li">Mi dia</li>
+            <li class = "nav__ul--li">Importante</li>
+            <li class = "nav__ul--li">Planeado</li>
+            <li class = "nav__ul--li">Asignadas a mi usuario</li>
+            <li class = "nav__ul--li">Tareas</li>
+        </ul>
+        <div class = "nav__div"><h1>+</h1>Nuava lista</div>
+    </nav>
+    <section class = "section">
+        <h1>Mi día</h1>
+        <div class = "section__div">
+            <img src="../Icons/calendario.png" alt="image not available">
+            <h2>Concéntrate en tu dia</h2>
+            <p>Termina tus tareas con una lista que se actualiza todos los dias</p>
+        </div>
+        <input type="text" name="" id="" placeholder="Agregar una tarea">
+        <div class = "section--div"><img src="../Icons/bombilla.png" alt=""></div>
+        <h5>Sugerencias</h5>
+        <p class = "section__p p"></p>
+    </section>
+    <script src = "../Controller/panel.js"></script>
 </body>
 </html>
