--- a/Css/--Panel.css
+++ b/Css/--Panel.css
@@ -61,7 +61,7 @@ body {
 .nav__div {
   display: flex;
   align-items: center;
-  margin: 105% 0%;
+  margin: 85% 0%;
   width: 90%;
   cursor: pointer;
   padding-left: 1em;
@@ -74,9 +74,9 @@ body {
 }
 
 .section {
-  width: 78.4%;
-  height: 44rem;
-  margin-left: 20.6rem;
+  width: 77.9%;
+  height: 39.5rem;
+  margin-left: 19rem;
   position: absolute;
   top: 2.3rem;
   display: flex;
@@ -97,7 +97,7 @@ body {
   position: absolute;
   color: #fff;
   margin-bottom: 45%;
-  margin-right: 77%;
+  margin-right: 76%;
   font-size: 15px;
   font-weight: 100;
   letter-spacing: 1px;
@@ -117,14 +117,16 @@ body {
   padding-top: 1em;
   text-align: center;
   color: #fff;
+  font-size: 21px;
 }
 .section__div p {
   padding-top: 1em;
   color: #fff;
+  font-size: 14px;
 }
 .section input {
   position: absolute;
-  margin-top: 35rem;
+  margin-top: 32rem;
   padding: 1em;
   width: 80%;
   opacity: 0.9;
