--- a/Css/--Panel.css
+++ b/Css/--Panel.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 * {
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -19,6 +21,13 @@ body {
   display: flex;
   flex-direction: column;
   position: absolute;
+}
+.nav__data {
+  position: absolute;
+  width: 50%;
+  top: 1.2rem;
+  left: 5.5rem;
+  padding: 0.1em;
 }
 .nav__header__img {
   width: 50px;
@@ -97,10 +106,14 @@ body {
   position: absolute;
   color: #fff;
   margin-bottom: 45%;
-  margin-right: 76%;
+  margin-right: 73.2%;
   font-size: 15px;
   font-weight: 100;
   letter-spacing: 1px;
+}
+.section .show {
+  visibility: hidden;
+  opacity: 0;
 }
 .section__div {
   width: 25%;
@@ -150,7 +163,7 @@ body {
 }
 .section h5 {
   position: absolute;
-  width: 5rem;
+  width: 6rem;
   height: 1.5rem;
   background-color: rgb(242, 242, 242);
   opacity: 0.7;
@@ -167,6 +180,162 @@ body {
 .section--div:hover + h5, .section--div:hover {
   visibility: visible;
   opacity: 1;
+}
+.section #miLista {
+  width: 80%;
+  height: 70%;
+  max-height: 70%;
+  position: absolute;
+  margin-right: 7.2rem;
+  margin-bottom: 0.5rem;
+}
+.section .li0 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li1 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li2 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li3 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li4 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li5 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li6 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li7 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li8 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .li9 {
+  list-style: none;
+  width: 100%;
+  margin-top: 3px;
+  height: 2.5em;
+  background-color: rgb(236, 240, 241);
+  border-radius: 3px 3px 3px 3px;
+  padding-left: 2em;
+  font-size: 16px;
+  padding-right: 1.5em;
+}
+.section .img {
+  position: relative;
+  margin-left: 97%;
+  bottom: 0.9em;
+  cursor: pointer;
+}
+.section h6 {
+  position: relative;
+  bottom: 1.5rem;
+  font-weight: 100;
+}
+.section .radio {
+  position: relative;
+  width: 2%;
+  height: 40%;
+  border-radius: 50%;
+  border: 1px solid #000;
+  bottom: 3.8rem;
+  right: 1.6rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section .changeColor::after {
+  background-color: rgb(105, 118, 130);
+  border: 0.5px solid #000;
+  content: "✓";
+  border: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 12px;
 }
 
 /*# sourceMappingURL=--Panel.css.map */
