--- a/Sass/--Panel.scss
+++ b/Sass/--Panel.scss
@@ -4,6 +4,8 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 body {
@@ -22,6 +24,14 @@ body {
     flex-direction: column;
     position: absolute;
 
+    &__data {
+        position: absolute;
+        width: 50%;
+        top: 1.2rem;
+        left: 5.5rem;
+        padding: .1em;
+    }
+
     &__header {
         &__img {
             width: 50px;
@@ -31,6 +41,8 @@ body {
             background-image: url("../Img/maxresdefault.jpg");
             @include MixinFunc.arreglar-imagen();
             margin-left: 1em;
+
+
         }
 
         input {
@@ -96,7 +108,8 @@ body {
     border-radius: 10px 0px 0px 0px;
     border: 1px solid rgb(242, 242, 242);
     background: linear-gradient(rgb(51, 120, 127, 0.75), rgb(241, 221, 214, 0.75));
-    h1{
+
+    h1 {
         position: absolute;
         color: #fff;
         margin-bottom: 50%;
@@ -104,15 +117,21 @@ body {
         font-weight: 100;
     }
 
-    &__p{
+    &__p {
         position: absolute;
         color: #fff;
         margin-bottom: 45%;
-        margin-right: 76%;
+        margin-right: 73.2%;
         font-size: 15px;
         font-weight: 100;
         letter-spacing: 1px;
     }
+
+    .show {
+        visibility: hidden;
+        opacity: 0;
+    }
+
     &__div {
         width: 25%;
         height: 40%;
@@ -168,7 +187,7 @@ body {
 
     h5 {
         position: absolute;
-        width: 5rem;
+        width: 6rem;
         height: 1.5rem;
         background-color: rgb(242, 242, 242);
         opacity: 0.70;
@@ -182,12 +201,71 @@ body {
 
     }
 
-  
-
-    &--div:hover+h5,&--div:hover{
+    &--div:hover+h5,
+    &--div:hover {
         visibility: visible;
         opacity: 1;
     }
 
+    #miLista {
+        width: 80%;
+        height: 70%;
+        max-height: 70%;
+        position: absolute;
+        margin-right: 7.2rem;
+        margin-bottom: .5rem;
+    }
+
+    @for $iterador from 0 through 9 {
+        .li#{$iterador} {
+            list-style: none;
+            width: 100%;
+            margin-top: 3px;
+            height: 2.5em;
+            background-color: rgb(236, 240, 241);
+            border-radius: 3px 3px 3px 3px;
+            padding-left: 2em;
+            font-size: 16px;
+            padding-right: 1.5em;
+        }
+    }
+
+    .img {
+        position: relative;
+        margin-left: 97%;
+        bottom: .9em;
+        cursor: pointer;
+    }
+
+    h6 {
+        position: relative;
+        bottom: 1.5rem;
+        font-weight: 100;
+    }
+
+    .radio {
+        position: relative;
+        width: 2%;
+        height: 40%;
+        border-radius: 50%;
+        border: 1px solid #000;
+        bottom: 3.8rem;
+        right: 1.6rem;
+        cursor: pointer;
+        @include MixinFunc.create-flexbox(center);
+    }
+
+    .changeColor::after {
+        background-color: rgb(105, 118, 130);
+        border: .5px solid #000;
+        content: '✓';
+        border: 0px;
+        @include MixinFunc.create-flexbox(center);
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        color: #fff;
+        font-size: 12px;
+    }
 
 }
