--- a/View/sign-in.html
+++ b/View/sign-in.html
@@ -7,6 +7,9 @@
     <title>Sign in</title>
     <link rel="icon" href="../Icons/documento.png">
     <link rel="stylesheet" href="../Css/--Sign-in.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
