--- a/View/panel.html
+++ b/View/panel.html
@@ -25,7 +25,6 @@
             <li class = "nav__ul--li">Tareas</li>
         </ul>
         <div class = "nav__div"><h1>+</h1>Nuava lista</div>
-        
     </nav>
     <section class = "section">
         <h1>Mi día</h1>
@@ -35,10 +34,14 @@
             <p>Termina tus tareas con una lista que se actualiza todos los dias</p>
         </div>
         <input type="text" name="" id="input" placeholder="Agregar una tarea" class = "input">
-        <div class = "section--div"><img src="../Icons/bombilla.png" alt=""></div>
+        <div class = "section--div bom"><img src="../Icons/bombilla.png" alt=""></div>
         <h5>Sugerencias</h5>
         <p class = "section__p p"></p>
         <ul id="miLista"></ul>
+        <div class = "sugerencias">
+            <img src="../Icons/idea.png" alt="">
+            <h3 class = "sug"></h3>
+        </div>
     </section>
     <script src = "../Controller/panel.js"></script>
 </body>
