--- a/View/sign-up.html
+++ b/View/sign-up.html
@@ -18,14 +18,14 @@
         <form action="" class="main__form">
             <div class="main__form--inputs">
                 <input name="name" type="text" class="main__form--inputs--action name" autocomplete="off">
-                <label for="name" class="main__form--inputs--action-label-1">
+                <label for="name" class="main__form--inputs--action-label-1 n">
                     <span class="main__form--inputs--action--label--span-1 name">
                         Nombre
                     </span>
                 </label>
                 <input type="text" class="main__form--inputs--action lastName" autocomplete="off">
-                <label class="main__form--inputs--action-label-2">
-                    <span class="main__form--inputs--action--label--span-2">
+                <label class="main__form--inputs--action-label-2 ina">
+                    <span class="main__form--inputs--action--label--span-2 a">
                         Apellido
                     </span>
                 </label>
@@ -39,7 +39,7 @@
                 </label>
                 <input type="password" class="main__form--inputs--div--action pass" id = "pass" autocomplete="off">
                 <label for="name" class="main__form--inputs--div--action-label-2">
-                    <span class="main__form--inputs--action--div--action-label-span-2">
+                    <span class="main__form--inputs--action--div--action-label-span-2 spanP">
                         Contraseña *
                     </span>
                 </label>
