Front page sign-up in process

--- a/View/sign-up.html
+++ b/View/sign-up.html
@@ -33,7 +33,7 @@
             <div class="main__form--inputs--div">
                 <input type="text" class="main__form--inputs--div--action email" autocomplete="off" >
                 <label for="name" class="main__form--inputs--div--action-label-1">
-                    <span class="main__form--inputs--action--div--action-label-span-1">
+                    <span class="main__form--inputs--action--div--action-label-span-1 c" >
                         Correo *
                     </span>
                 </label>
