--- a/Css/--Sign-up.css
+++ b/Css/--Sign-up.css
@@ -60,11 +60,11 @@ body {
   }
   body .main .spanP {
     position: relative;
-    bottom: 3em;
+    bottom: 3.5em;
   }
   body .main .ina {
     position: relative;
-    top: 0.5em;
+    top: 0.1em;
     right: 13.5em;
   }
   body .main .lastName {
@@ -74,6 +74,11 @@ body {
   body .main .n {
     position: relative;
     right: 13.6em;
+    bottom: 1.2em;
+  }
+  body .main .c {
+    position: relative;
+    bottom: 0.2em;
   }
   body .main h1 {
     padding-left: 4.5em;
