--- a/Sass/--Sign-up.scss
+++ b/Sass/--Sign-up.scss
@@ -29,12 +29,12 @@ body {
             }
             .spanP{
                 position: relative;
-                bottom: 3em;
+                bottom: 3.5em;
             }
 
             .ina{
                 position: relative;
-                top: .5em;
+                top: .1em;
                 right: 13.5em;
             }
 
@@ -44,9 +44,13 @@ body {
             }
             .n{
                 position: relative;
-                right: 13.6em
+                right: 13.6em;
+                bottom: 1.2em;
             }
-
+            .c{
+                position: relative;
+                bottom: .2em;
+            }
             h1{
                 padding-left: 4.5em
             }
