Front page personal area completed

--- a/View/panel.html
+++ b/View/panel.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <nav class = "nav">
+        <div class = "close">
+            <img src="../Icons/cerrar.png" alt="">
+        </div>
         <div class = "nav__data data"></div>
         <header class="nav__header header">
             <div class = "nav__header__img"></div>
@@ -27,6 +30,9 @@
         <div class = "nav__div"><h1>+</h1>Nuava lista</div>
     </nav>
     <section class = "section">
+        <div class = "menu">
+            <img src="../Icons/menu.png" alt="">
+        </div>
         <h1>Mi día</h1>
         <div class = "section__div div">
             <img src="../Icons/calendario.png" alt="image not available">
@@ -35,7 +41,7 @@
         </div>
         <input type="text" name="" id="input" placeholder="Agregar una tarea" class = "input">
         <div class = "section--div bom"><img src="../Icons/bombilla.png" alt=""></div>
-        <h5>Sugerencias</h5>
+        <h5 class = "h5">Sugerencias</h5>
         <p class = "section__p p"></p>
         <ul id="miLista"></ul>
         <div class = "sugerencias">
