--- a/Css/--Panel.css
+++ b/Css/--Panel.css
@@ -11,6 +11,124 @@ body {
   font-weight: 100;
   overflow: hidden;
 }
+@media (max-width: 820px) {
+  body .nav {
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s;
+    height: 0em;
+  }
+  body .nav .close {
+    position: relative;
+    margin-left: 23em;
+  }
+  body .nav .data {
+    position: absolute;
+    margin: 10% 0;
+  }
+  body .showNav {
+    position: relative;
+    visibility: visible;
+    opacity: 1;
+    height: 46.5rem;
+  }
+  body .section {
+    position: relative;
+    width: 100%;
+    right: 18.9rem;
+    transition: 0.5s;
+  }
+  body .section h1 {
+    width: 25%;
+    position: absolute;
+    font-size: 21px;
+    padding-left: 1.8em;
+    margin-bottom: 25em;
+  }
+  body .section .p {
+    position: absolute;
+    bottom: 10em;
+    width: 48%;
+    left: 1.1em;
+    bottom: 23em;
+  }
+  body .section .div {
+    margin-top: 4em;
+    width: 90%;
+  }
+  body .section .bom {
+    position: absolute;
+    bottom: 22em;
+  }
+  body .section input {
+    border-radius: 30px 30px 30px 30px;
+  }
+  body .section .menu {
+    position: absolute;
+    margin-right: 24em;
+    margin-bottom: 36em;
+    visibility: visible;
+    opacity: 1;
+  }
+  body .section #miLista {
+    width: 80%;
+    height: 70%;
+    max-height: 70%;
+    position: absolute;
+    margin-right: 7.2rem;
+    margin-bottom: 0.5rem;
+    margin: 0 auto;
+  }
+  body .section .radio {
+    position: relative;
+    width: 6%;
+    height: 40%;
+    border-radius: 50%;
+    border: 1px solid #000;
+    bottom: 4.7rem;
+    right: 1.6rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  body .section .h5 {
+    position: absolute;
+    bottom: 30.5em;
+    font-size: 12px;
+    right: 2em;
+    display: none;
+    text-align: center;
+    padding-top: 0.2em;
+  }
+  body .section .sugerencias {
+    position: absolute;
+    width: 55%;
+    height: 20%;
+    border: 1px solid transparent;
+    background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5));
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    border-radius: 5%;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s;
+    transform: scale(0.5s);
+    margin-bottom: 20rem;
+  }
+  body .section .sugerencias img {
+    padding-top: 0.5em;
+  }
+  body .section .sugerencias h3 {
+    padding-bottom: 1em;
+    color: #fff;
+    font-size: 14px;
+  }
+  body .section .showS {
+    visibility: visible;
+    opacity: 1;
+  }
+}
 
 .nav {
   width: 20rem;
@@ -80,6 +198,10 @@ body {
 }
 .nav__div:hover {
   background: rgb(234, 234, 234);
+}
+.nav .close {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .section {
@@ -359,66 +481,6 @@ body {
   bottom: 1.3em;
   cursor: pointer;
 }
-.section .editar0 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar1 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar2 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar3 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar4 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar5 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar6 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar7 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar8 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
-.section .editar9 {
-  position: relative;
-  margin-left: 90%;
-  bottom: 3.8em;
-  cursor: pointer;
-}
 .section h6 {
   position: relative;
   bottom: 2.5rem;
@@ -476,6 +538,10 @@ body {
 .section .showS {
   visibility: visible;
   opacity: 1;
+}
+.section .menu {
+  visibility: hidden;
+  opacity: 0;
 }
 
 /*# sourceMappingURL=--Panel.css.map */
