--- a/Sass/--Panel.scss
+++ b/Sass/--Panel.scss
@@ -12,6 +12,140 @@ body {
     background-color: rgb(243, 243, 243);
     font-weight: 100;
     overflow: hidden;
+
+    @media (max-width:820px) {
+        .nav {
+            visibility: hidden;
+            opacity: 0;
+            transition: .5s;
+            height: 0em;
+            .close{
+                position: relative;
+                margin-left: 23em;
+
+            }
+
+            .data{
+                position: absolute;
+                margin: 10% 0;
+            }
+        }
+        .showNav{
+            position: relative;
+            visibility: visible;
+            opacity: 1;
+            height: 46.5rem;
+        }
+
+        .section {
+            position: relative;
+            width: 100%;
+            right: 18.9rem;
+            transition: .5s;
+            h1 {
+                width: 25%;
+                position: absolute;
+                font-size: 21px;
+                padding-left: 1.8em;
+                margin-bottom: 25em;
+            }
+
+            .p {
+                position: absolute;
+                bottom: 10em;
+                width: 48%;
+                left: 1.1em;
+                bottom: 23em;
+            }
+
+            .div {
+                margin-top: 4em;
+                width: 90%;
+            }
+
+            .bom {
+                position: absolute;
+                bottom: 22em;
+            }
+
+            input {
+                border-radius: 30px 30px 30px 30px;
+            }
+
+            .menu {
+                position: absolute;
+                margin-right: 24em;
+                margin-bottom: 36em;
+                visibility: visible;
+                opacity: 1;
+            }
+
+            #miLista {
+                width: 80%;
+                height: 70%;
+                max-height: 70%;
+                position: absolute;
+                margin-right: 7.2rem;
+                margin-bottom: .5rem;
+                margin: 0 auto;
+            }
+
+            .radio {
+                position: relative;
+                width: 6%;
+                height: 40%;
+                border-radius: 50%;
+                border: 1px solid #000;
+                bottom: 4.7rem;
+                right: 1.6rem;
+                cursor: pointer;
+                @include MixinFunc.create-flexbox(center);
+            }
+
+            .h5 {
+                position: absolute;
+                bottom: 30.5em;
+                font-size: 12px;
+                right: 2em;
+                display: none;
+                text-align: center;
+                padding-top: .2em;
+            }
+
+            .sugerencias {
+                position: absolute;
+                width: 55%;
+                height: 20%;
+                border: 1px solid transparent;
+                background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5));
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+                text-align: center;
+                border-radius: 5%;
+                visibility: hidden;
+                opacity: 0;
+                transition: all .5s;
+                transform: scale(0.5s);
+                margin-bottom: 20rem;
+
+                img {
+                    padding-top: .5em;
+                }
+
+                h3 {
+                    padding-bottom: 1em;
+                    color: #fff;
+                    font-size: 14px;
+                }
+
+
+            }
+
+            .showS {
+                visibility: visible;
+                opacity: 1;
+            }
+        }
+    }
 }
 
 .nav {
@@ -23,7 +157,7 @@ body {
     display: flex;
     flex-direction: column;
     position: absolute;
-
+    
     &__data {
         position: absolute;
         width: 50%;
@@ -94,6 +228,10 @@ body {
     &__div:hover {
         background: rgb(234, 234, 234);
     }
+    .close{
+        visibility: hidden;
+        opacity: 0;
+    }
 }
 
 .section {
@@ -108,7 +246,8 @@ body {
     border-radius: 10px 0px 0px 0px;
     border: 1px solid rgb(242, 242, 242);
     background: linear-gradient(rgb(51, 120, 127, 0.75), rgb(241, 221, 214, 0.75));
-
+    
+  
     h1 {
         position: absolute;
         color: #fff;
@@ -229,19 +368,12 @@ body {
             padding-right: 1.5em;
         }
     }
-    @for $iterador from 0 through 9{
-        .img#{$iterador}{
+
+    @for $iterador from 0 through 9 {
+        .img#{$iterador} {
             position: relative;
             margin-left: 97%;
             bottom: 1.3em;
-            cursor: pointer;
-        }
-    }
-    @for $iterador from 0 through 9{
-        .editar#{$iterador}{
-            position: relative;
-            margin-left: 90%;
-            bottom: 3.8em;
             cursor: pointer;
         }
     }
@@ -277,7 +409,7 @@ body {
         font-size: 12px;
     }
 
-    .sugerencias{
+    .sugerencias {
         position: absolute;
         width: 25%;
         height: 20%;
@@ -291,17 +423,26 @@ body {
         transition: all .5s;
         transform: scale(0.5s);
         margin-bottom: 30rem;
-        img{
+
+        img {
             padding-top: .5em;
         }
-        h3{
+
+        h3 {
             color: #fff;
             font-size: 14px;
         }
     }
 
-    .showS{
+    .showS {
         visibility: visible;
         opacity: 1;
     }
+
+    .menu {
+        visibility: hidden;
+        opacity: 0;
+    }
+
+    
 }
