--- a/Css/--Panel.css
+++ b/Css/--Panel.css
@@ -11,7 +11,7 @@ body {
   font-weight: 100;
   overflow: hidden;
 }
-@media (max-width: 800px) {
+@media (max-width: 700px) {
   body .nav {
     visibility: hidden;
     opacity: 0;
@@ -67,10 +67,11 @@ body {
   }
   body .section .menu {
     position: absolute;
-    margin-right: 24em;
+    right: 24.2em;
     margin-bottom: 36em;
     visibility: visible;
     opacity: 1;
+    display: flex;
   }
   body .section #miLista {
     width: 80%;
